fix: Uma barra errada pemitia que um Cliente cadastrasse indevidamente um Produto